[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/Start.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/EnemyManager.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/tile.png" type="Texture" id=4]
[ext_resource path="res://scenes/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/score.tres" type="DynamicFont" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "tile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 24 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreArea" type="Area2D" parent="."]
position = Vector2( 32, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource( 3 )

[node name="EnemyManager" type="Node2D" parent="."]
position = Vector2( 672, 160 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="EnemyManager"]
wait_time = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Start" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_right = -8.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 6 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="ScoreArea" to="." method="_on_ScoreArea_area_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
[connection signal="timeout" from="EnemyManager/Timer" to="EnemyManager" method="_on_Timer_timeout"]
[connection signal="start_clicked" from="CanvasLayer/Start" to="." method="_on_Start_start_clicked"]
